--- a/docs/asyn/Asyn.tex
+++ b/docs/asyn/Asyn.tex
@@ -457,25 +457,27 @@ const HalfAdder = module {
 \]
 \[
 	\begin{array}{rcl}
-		t   & :=   & \verb|bool| \alt  (\verb|u| \alt \verb|i|)\overline{[0-9]} \alt \verb|sig| \alt m                                     \\
-		    & \alt & p \alt \verb|type| \alt \verb|clock| \alt \verb|reset| \alt S                                                         \\
-		e   & :=   & t \alt {e}\:\mathit{op}\:{e} \alt \mathit{op}\ {e} \alt {e}.{e} \alt {e}(\overline{e}) \alt (e) \alt \&\verb|var|^? e \\
-		    & \alt & b \alt \verb|undefined| \alt \verb|true| \alt \verb|false| \alt x \alt e\verb|.*|                                     \\
-		    & \alt & \verb|return | e \alt L_n                                                                                             \\
-		    & \alt & \ifline{e}\ e\ (\verb|else | e)^?                                                                                     \\
-		p_f & :=   & id \verb|: &var|^? t                                                                                                  \\
-		m   & :=   & \verb|module { | \overline{p_f}\ \overline{s}\ \overline{c} \verb| }|                                                 \\
-		x   & :=   & id                                                                                                                    \\
-		q_p & :=   & \verb|pub|                                                                                                            \\
-		s_q & :=   & \verb|const|                                                                                                          \\
-		s   & :=   & q_p^?\ s_q\ x (\verb|: | t)^? \verb| = | e \verb|;|                                                                   \\
-		    & \alt & x = e;                                                                                                                \\
-		    & \alt & \ifline{e}\ e\ (\verb|else | e)^?\verb|;|                                                                             \\
-		c   & :=   & q_p^?\ \verb|comb | id \verb|(|\overline{id:\ e} \verb|) | t \verb| {| \overline{s} \verb|}|                          \\
-		S   & :=   & \verb|struct { | \overline{S_f}\ \overline{s}\ \overline{f} \verb| }|                                                 \\
-		S_f & :=   & id \verb|: | t                                                                                                        \\
-		f   & :=   & q_p^? \verb| fn | id \verb|(|\overline{id:\ e}\verb|) | t \verb| {| \overline{s} \verb|}|                             \\
-		L_n & :=   & \overline{0-9} \alt \verb|0b|\overline{(0 \alt 1)} \alt \verb|0x|(\overline{0-F})                                     \\
+		t   & :=   & \verb|bool| \alt  (\verb|u| \alt \verb|i|)\overline{[0-9]} \alt \verb|sig| \alt m \alt \verb|type| \alt \verb|clock|    \\
+		    & \alt & \verb|reset| \alt S                                                                                                     \\
+		e   & :=   & t \alt {e}\:\mathit{op}\:{e} \alt \mathit{op}\ {e} \alt {e}.{e} \alt {e}(\overline{e}) \alt (e) \alt \&\verb|var|^? e   \\
+		    & \alt & \verb|undefined| \alt \verb|true| \alt \verb|false| \alt x \alt e\verb|.*| \alt L_n                                     \\
+		    & \alt & \verb|return | e                                                                                                        \\
+		    & \alt & \ifline{e}\ e\ (\verb|else | e)^?                                                                                       \\
+		p_f & :=   & id \verb|: &var|^? t                                                                                                    \\
+		m   & :=   & \verb|module { | \overline{p_f}\ \overline{s}\ \overline{c} \verb| }|                                                   \\
+		x   & :=   & id                                                                                                                      \\
+		q_p & :=   & \verb|pub|                                                                                                              \\
+		s_q & :=   & \verb|const|                                                                                                            \\
+		s   & :=   & q_p^?\ s_q\ x (\verb|: | t)^? \verb| = | e \verb|;|                                                                     \\
+		    & \alt & x = e;                                                                                                                  \\
+		    & \alt & \ifline{e}\ e\ (\verb|else | e)^?                                                                                       \\
+		c   & :=   & q_p^?\ \verb|comb | id \verb|(|\overline{id:\ e} \verb|) | t \verb| { | \overline{s} \verb| }|                          \\
+		S   & :=   & \verb|struct { | \overline{S_f}\ \overline{s}\ \overline{f} \verb| }|                                                   \\
+		S_f & :=   & id \verb|: | t                                                                                                          \\
+		f   & :=   & q_p^? \verb| fn | id \verb|(|\overline{id:\ e}\verb|) | t \verb| { | \overline{s} \verb| }|                             \\
+		b_w & :=   & (1-9)^+\overline{0-9}                                                                                                   \\
+		L_n & :=   & \overline{0-9} \alt \verb|0b|\overline{(0 \alt 1)} \alt \verb|0x|\overline{(0-F)} \alt b_w\verb|b|\overline{(0 \alt 1)} \\
+		    & :=   & b_w\verb|x|\overline{(0-F)}
 	\end{array}
 \]
 
